--- a/Project3.html
+++ b/Project3.html
@@ -8,6 +8,7 @@
     <title>Navbars</title>
 </head>
 <body>
+<div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,5 +44,6 @@
           </form>
         </div>
       </nav>
-</body>
+</div>
+    </body>
 </html>
