--- a/Projet3NavBArs.html
+++ b/Projet3NavBArs.html
@@ -88,7 +88,7 @@
             <label for="exampleFormControlFile1">Example file input</label>
             <input type="file" class="form-control-file" id="exampleFormControlFile1">
         </div>
-        <button type="submit" class="btn btnn">Submit</button>
+        <button type="submit" class="btn btnn">SUBMIT</button>
 
     </form>
     </div>
