--- a/bootstrapproject.html
+++ b/bootstrapproject.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Welcome</a>
+        <a class="navbar-brand" href="bootstrapproject.html">Welcome</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,7 +39,7 @@
             <li>Next creat the grid system to add in thumbnail pictures of coffee;</li>
             <li>Images links:
                 <ul>
-                    <li><a href="#">One</a></li>
+                    <li><a href="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale">One</a></li>
                     <li><a href="#">Two</a></li>
                     <li><a href="#">Three</a></li>
                     <li><a href="#">Four</a></li>
@@ -57,6 +57,35 @@
 
         Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans, primarily due to its caffeine content.[3] It is one of the most popular drinks in the world,[4] and can be prepared and presented in a variety of ways (e.g., espresso, French press, caffè latte). It is usually served hot, although iced coffee is common.</p>
     </div>
-    
+    <div class="container"> 
+    <div class="jumbotron">
+      <div class="row">
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+          <div class="col-lg-4  boxy">      <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1072007868%2F960x0.jpg%3Ffit%3Dscale" alt="..." class="img-thumbnail">
+          </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
